@@ -3,6 +3,11 @@
 Memcached::libmemcached::Changes - List of significant changes
 
 
+=head2 Changes in 0.4403 27th Oct 2010
+
+  Added new methods memcached_server_add_with_weight() and
+    memcached_server_add_unix_socket_with_weight().
+
 =head2 Changes in 0.4402 26th Oct 2010
 
   Changed walk_stats() API. Now uses the memcached_stat_execute() function
